<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.acanx.util</groupId>
        <artifactId>autil-incubator</artifactId>
        <version>${revision}</version>
    </parent>

    <groupId>com.acanx.util</groupId>
    <artifactId>incubator-annotation</artifactId>
    <version>0.4.3-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>Incubator-Annotation</name>
    <description>AUtil Incubator Annotation Module</description>
    <url>https://acanx.com</url>

    <properties>
        <java.version>25</java.version>
<!--        <maven.compiler.release>21</maven.compiler.release>-->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <useIncrementalCompilation>false</useIncrementalCompilation>
        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.squareup</groupId>
            <artifactId>javapoet</artifactId>
            <version>1.13.0</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.ow2.asm</groupId>-->
<!--            <artifactId>asm</artifactId>-->
<!--            <version>9.5</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.ow2.asm</groupId>-->
<!--            <artifactId>asm-commons</artifactId>-->
<!--            <version>9.5</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.google.auto.service</groupId>-->
<!--            <artifactId>auto-service</artifactId>-->
<!--            <version>1.1.1</version>-->
<!--            &lt;!&ndash; 编译时使用，无需传递到运行时 &ndash;&gt;-->
<!--            <scope>provided</scope>-->
<!--            &lt;!&ndash; 或 &ndash;&gt;-->
<!--            <optional>true</optional>-->
<!--        </dependency>-->
        <dependency>
            <groupId>com.acanx.util</groupId>
            <artifactId>autil-core</artifactId>
            <version>${revision}</version>
        </dependency>
        <!-- 注解处理器支持 -->
<!--        <dependency>-->
<!--            <groupId>org.apache.maven.plugins</groupId>-->
<!--            <artifactId>maven-compiler-plugin</artifactId>-->
<!--            <version>3.14.0</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.acanx.meta.model</groupId>
            <artifactId>model-test</artifactId>
            <version>0.5.7-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>



    <dependencyManagement>
    </dependencyManagement>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                    <useIncrementalCompilation>false</useIncrementalCompilation>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>com.acanx.util</groupId>
                            <artifactId>incubator-annotation</artifactId>
                            <version>${revision}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
